--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,6 +69,7 @@
         <item name="android:minHeight">48dp</item>
         <item name="android:background">@drawable/field</item>
         <item name="android:textColorHint">@color/text_hint</item>
+        <item name="android:textColor">@color/text_norm_selector</item>
         <item name="android:inputType">textMultiLine</item>
         <item name="android:gravity">top|left</item>
     </style>
